kube/app-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 2
  template: 
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: app
        image: app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
