kube/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 2
  template: 
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: acme-container
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
