kube/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
  namespace: kube-system
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
