kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: www.kube.site
  - http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 80
  tls:
  - hosts:
    - www.kube.site
    secretName: webapp-tls
